--- a/staff/recertifications.yml
+++ b/staff/recertifications.yml
@@ -66,21 +66,25 @@ blocks:
               - _state: debug_clipboard.value
   - id: table
     type: AgGridAlpine # A supporting component type that uses https://www.ag-grid.com
-    events:
-      onCellClick:
-        - id: notification
-          type: CallMethod
-          params:
-            blockId: copy_notification
-            method: open
-        - id: set_selected
-          type: SetState
-          params:
-            debug_clipboard:
-              _event: cell
+    # events:
+    #   onRowClick:
+    #     - id: notification
+    #       type: CallMethod
+    #       params:
+    #         blockId: copy_notification
+    #         method: open
+    #     - id: set_selected
+    #       type: SetState
+    #       params:
+    #         debug_clipboard:
+    #           _event: row
     properties:
       rowData:
         _request: get_data.rows # Send all the data returned by the query `get_data`. KnexRaw requests need to call `rows`; KnexBuilder requests don't
+      # These next two settings allow the user to select text in the grid.
+      # See https://ag-grid.com/react-data-grid/clipboard/#using-the-browsers-text-selection
+      enableCellTextSelection: true
+      ensureDomOrder: true
       defaultColDef: # The table columns are sortable, resizable, and filterable
         sortable: true
         resizable: true
