--- a/participant/docker-compose.yml
+++ b/participant/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      s3_local:
+        condition: service_healthy
     environment:
       DATABASE_URL: postgresql://postgres:incredible_local_secret_phrase@postgres:5432/postgres?schema=public
     init: true
@@ -50,6 +52,18 @@ services:
     read_only: true
     volumes:
       - remix_prod_tmp:/tmp
+
+  s3_local:
+    image: localstack/localstack:latest
+    environment:
+      SERVICES: s3
+      AWS_DEFAULT_REGION: us-west-2
+      DATA_DIR: /tmp/localstack/data
+      S3_DIR: /tmp/localstack/s3
+    ports:
+      - "4566:4566"
+    volumes:
+      - "./mock_s3:/tmp/localstack/s3"
 
 volumes:
   remix_dev_nodemodules:
