--- a/participant/package.json
+++ b/participant/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "run-s dev:startdb css dev:remix",
+    "dev": "run-s dev:startdb css dev:starts3 dev:remix",
     "dev:docker": "npm install && run-s css dev:remix",
     "dev:remix": "remix dev",
     "dev:starts3": "docker compose up s3_local --wait",
@@ -36,6 +36,9 @@
     "/public/build"
   ],
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.309.0",
+    "@aws-sdk/lib-storage": "^3.309.0",
+    "@aws-sdk/s3-request-presigner": "^3.309.0",
     "@prisma/client": "^4.5.0",
     "@remix-run/express": "^1.7.6",
     "@remix-run/node": "^1.7.6",
