[PRP-221] Functionality done except reporting errors to client. Still needs new tests

--- a/participant/.env.example
+++ b/participant/.env.example
@@ -7,4 +7,6 @@ DATABASE_URL=postgresql://postgres:incredible_local_secret_phrase@127.0.0.1:5432
 POSTGRES_PASSWORD=incredible_local_secret_phrase
 POSTGRES_USER=postgres
 PUBLIC_DEMO_MODE=false
-S3_ENDPOINT_URL: http://s3.localhost.localstack.cloud:4566
+S3_ENDPOINT_URL=http://s3.localhost.localstack.cloud:4566
+MAX_UPLOAD_SIZE_BYTES=5242880
+MAX_UPLOAD_FILECOUNT=5
