--- a/infra/.gitignore
+++ b/infra/.gitignore
@@ -35,6 +35,8 @@ override.tf.json
 # example: *tfplan*
 *.plan
 *.tfstate
+plan.json
+tfstate.json
 
 # Exclude terraform lock files
 *.terraform.lock.hcl
