--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,7 +38,7 @@ env:
   IMAGE_TAG: ${{ github.sha }}-${{ github.run_number }}-${{ github.run_attempt }}
 
 # Need to repeat the expression since env.WHATEVER is not accessible in this context
-concurrency: cd-${{ inputs.env_name || 'dev' }}-${{ inputs.app_name || 'participant' }}
+concurrency: cd-${{ toJson(github.event.inputs.env_name) || 'dev' }}-${{ toJson(github.event.inputs.app_name) || 'participant' }}
 
 jobs:
   deploy:
@@ -50,7 +50,7 @@ jobs:
 
     steps:
       - name: ℹ️ Show Github context
-        run: echo "$GITHUB_CONTEXT"
+        run: echo "${{ toJson(github.event.inputs.env_name) }}"
 
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
