--- a/analytics/Dockerfile
+++ b/analytics/Dockerfile
@@ -7,3 +7,5 @@ ENV PORT 8080
 
 # Overwrite apache default port 80.
 RUN sed -i "s/80/$PORT/g" /etc/apache2/sites-available/000-default.conf /etc/apache2/ports.conf
+
+COPY docker-entrypoint.sh /entrypoint.sh
