--- a/analytics/Dockerfile
+++ b/analytics/Dockerfile
@@ -8,4 +8,8 @@ ENV PORT 8080
 # Overwrite apache default port 80.
 RUN sed -i "s/80/$PORT/g" /etc/apache2/sites-available/000-default.conf /etc/apache2/ports.conf
 
-COPY docker-entrypoint.sh /entrypoint.sh
+# Copy files from /usr/src/matomo and set permissions.
+RUN cp -r /usr/src/matomo/* /var/www/html \
+  && chown -R www-data:www-data /var/www/html
+
+USER www-data
