--- a/staff/docker-compose.yml
+++ b/staff/docker-compose.yml
@@ -51,19 +51,24 @@ services:
     volumes:
       - ./prisma/seed.ts:/home/node/remix/prisma/seed.ts:ro
 
-  # lowdefy_prod:
-  #   build:
-  #     target: prod
-  #     context: .
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #   environment:
-  #     LOWDEFY_SECRET_PG_CONNECTION_STRING: postgresql://postgres:incredible_local_secret_phrase@postgres:5432/postgres?schema=public
-  #   init: true
-  #   ports:
-  #     - "3333:3000"
-  #   read_only: true
+  lowdefy_prod:
+    build:
+      target: prod
+      context: .
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      LOWDEFY_SECRET_PG_CONNECTION_STRING: postgresql://postgres:incredible_local_secret_phrase@postgres:5432/postgres?schema=public
+    healthcheck:
+      test: "wget --no-verbose --tries=1 --spider http://localhost:3000/recertifications || exit 1"
+      interval: 30s
+      retries: 3
+      timeout: 5s
+    init: true
+    ports:
+      - "3333:3000"
+    read_only: true
 
 volumes:
   lowdefy_dev_nodemodules:
