--- a/participant/docker-compose.e2e.yml
+++ b/participant/docker-compose.e2e.yml
@@ -11,10 +11,10 @@
 # Note: This usage *requires* running docker-compose down; otherwise containers are
 #       will hang around forever. Not suitable for CI.
 version: "3.7"
-
+name: participant-e2e
 services:
   # Create a database to run e2e tests against
-  database-e2e:
+  database:
     image: postgres
     environment:
       POSTGRES_PASSWORD: incredible_local_secret_phrase
@@ -34,18 +34,21 @@ services:
       context: .
     # The database must be up and running before the remix server will start
     depends_on:
-      database-e2e:
+      database:
         condition: service_healthy
-      s3_local-e2e:
+      s3_local:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgresql://postgres:incredible_local_secret_phrase@database-e2e:5432/postgres?schema=public
-      S3_ENDPOINT_URL: http://s3.localhost.localstack.cloud:4566
+      DATABASE_URL: postgresql://postgres:incredible_local_secret_phrase@database:5432/postgres?schema=public
+      S3_ENDPOINT_URL: http://s3.s3_local:5566
+      AWS_ACCESS_KEY_ID: "test"
+      AWS_SECRET_ACCESS_KEY: "test"
       MAX_UPLOAD_FILECOUNT: 5
       MAX_UPLOAD_SIZE_BYTES: 5242880
+      PORT: 3005
     # Check that the remix server is up and running
     healthcheck:
-      test: "curl -f http://localhost:3000/healthcheck || exit 1"
+      test: "curl -f http://localhost:3005/healthcheck || exit 1"
       timeout: 5s
       retries: 20
     init: true
@@ -53,27 +56,28 @@ services:
       - participant_portal-e2e
     # Expose a port in case it's useful for debugging
     ports:
-      - 3000:3000
+      - 3005:3005
 
   # Create an S3 Localstack server for e2e tests
-  s3_local-e2e:
+  s3_local:
     image: localstack/localstack:latest
     environment:
       SERVICES: s3
       AWS_DEFAULT_REGION: us-west-2
-      DATA_DIR: /tmp/localstack/data
-      S3_DIR: /tmp/localstack/s3
+      EDGE_PORT: 5566
+      HOSTNAME_EXTERNAL: s3_local
     healthcheck:
-      test: "curl -f http://localhost.localstack.cloud:4566/_localstack/health || exit 1"
+      test: "curl -f http://localhost.localstack.cloud:5566/_localstack/health || exit 1"
       timeout: 5s
       retries: 5
     ports:
-      - "5566:4566"
+      - "5566:5566"
     networks:
       participant_portal-e2e:
         aliases:
           - s3.localhost.localstack.cloud
-          - participant-uploads.localhost.localstack.cloud
+          - s3.s3_local
+          - participant-uploads.s3.s3_local
 
   # Create the playwright container
   playwright:
