--- a/participant/docker-compose.yml
+++ b/participant/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:incredible_local_secret_phrase@postgres:5432/postgres?schema=public
       S3_ENDPOINT_URL: s3.localhost.localstack.cloud:4566
+      AWS_ACCESS_KEY_ID: ""
+      AWS_SECRET_ACCESS_KEY: ""
       MAX_UPLOAD_FILECOUNT: 5
       MAX_UPLOAD_SIZE_BYTES: 5242880
     init: true
