--- a/participant/package.json
+++ b/participant/package.json
@@ -35,7 +35,7 @@
     "/public/build"
   ],
   "dependencies": {
-    "@prisma/client": "^4.12.0-integration-rtld-deepbind.3",
+    "@prisma/client": "^4.12.0",
     "@remix-run/express": "^1.7.6",
     "@remix-run/node": "^1.7.6",
     "@remix-run/react": "^1.7.6",
@@ -110,7 +110,7 @@
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "prettier": "^2.8.4",
-    "prisma": "^4.12.0-integration-rtld-deepbind.3",
+    "prisma": "^4.12.0",
     "sass": "^1.56.1",
     "tmp": "^0.2.1",
     "ts-jest": "^29.0.3",
