--- a/participant/Makefile
+++ b/participant/Makefile
@@ -1,9 +1,15 @@
 .PHONY : \
 	release-build
 
+ifeq ($(ENV_NAME), dev)
+TARGET := lower-envs
+else
+TARGET := prod
+endif
+
 release-build:
 	docker buildx build \
-		--target prod \
+		--target $(TARGET) \
 		--platform=linux/amd64 \
 		$(OPTS) \
 		.
