Add ability to filter contact person col by preferred name.

--- a/staff/pages/recert.yml
+++ b/staff/pages/recert.yml
@@ -80,6 +80,8 @@ blocks:
                 - ", "
                 - __args: 0.data.form_data.name.firstName
                 - ", "
+                - __args: 0.data.form_data.name.preferredName
+                - ", "
                 - __args: 0.data.form_data.contact.phoneNumber
                 - ", "
                 - __args: 0.data.agency_name
